--- a/Opozee.WebApp/ClientApp/src/app/questionDetail/questiondetail.component.css
+++ b/Opozee.WebApp/ClientApp/src/app/questionDetail/questiondetail.component.css
@@ -344,6 +344,7 @@ span.profile_left p {
   width: 90%;
   float: left;
   position: fixed;
+  z-index: 1000;
   left: 5%;
   bottom: 35px;
 }
@@ -355,6 +356,7 @@ span.profile_left p {
     border-radius: 10%;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
     cursor: pointer;
+
   }
 
 
